--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        //swoosh
+<!--        swoosh-->
         <activity android:name=".swoosh.controller.FinishActivity" />
         <activity android:name=".swoosh.controller.SkillActivity" />
         <activity android:name=".swoosh.controller.BaseActivity" />
